[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/main-theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/GravityBold-24.tres" type="DynamicFont" id=2]
[ext_resource path="res://Screens/AIDifficultyDialog.gd" type="Script" id=3]

[node name="AIDifficultyDialog" type="WindowDialog"]
margin_left = 224.0
margin_top = 192.0
margin_right = 800.0
margin_bottom = 576.0
rect_min_size = Vector2( 576, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -192.0
margin_right = 288.0
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 87.0
margin_top = 92.0
margin_right = 489.0
margin_bottom = 292.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 50

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 402.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 2 )
text = "Choose AI Difficulty"
align = 1
valign = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
margin_top = 74.0
margin_right = 402.0
margin_bottom = 112.0

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 402.0
margin_bottom = 200.0
text = "Cancel"
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
